[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langserve>=0.3.3",
    "requests>=2.32.5",
    "sse-starlette>=3.2.0",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]
